css/main.css
a {
    color: #b8d3d1;
    font-family: 'CircularStd';
}

body {
    font-size: 1.1rem !important;
}

h3 {
    font-size: 1.5rem !important;
}

:root {
    --animate-delay: 0.2s;
}

::-moz-selection {
    background: rgba(206, 123, 145, 0.7);
  }
  
::selection {
    background: rgba(206, 123, 145, 0.7);
}

.main-title {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.nav-link {
    float: right;
    font-size: 1.2rem;
}

.main-title:hover {
    cursor: default;
}

.directors {
    display: flex;
    flex-direction: row;
    padding: 0vw 20vw;
    margin: 2vw 0vw 2vw 0vw;
}

.everyone-else {
    display: flex;
    flex-direction: row;
    padding: 0vw 20vw;
}

figure {
    width: 20vw;
}

.prof {
    display: absolute;
}

.figure-e {
    width: 15vw;
}

.figure-image {
    width: 15vw;
    border-radius: 50%;
    border: 0.3vw solid #eeeeee;
}

.figure-image-e {
    width: 12vw;
    border-radius: 50%;
    border: 0.3vw solid #eeeeee;
}

.figure-caption {
    color: lightgray;
    font-size: 1.2rem !important;
}

.figure-caption-e {
    color: lightgray;
    font-size: 1.0rem !important;
}

.figure-caption-title {
    margin-top: 20px;
    color: white;
    font-size: 1.4rem !important;
}

.figure-caption-title-e {
    margin-top: 20px;
    color: white;
    font-size: 1.2rem !important;
}

@font-face {
    font-family: 'CircularStd';
    src: url('../fonts/CircularStd-Black.eot?#iefix') format('embedded-opentype'), url('../fonts/CircularStd-Black.woff') format('woff'), url('../fonts/CircularStd-Black.ttf') format('truetype'), url('../fonts/CircularStd-Black.svg#CircularStd-Black') format('svg');
    font-weight: normal;
    font-style: normal;
}

html {
    overflow: hidden !important;
    overflow-y: auto !important;
    scrollbar-color: #000000;
    /* scroll thumb & track */
    scroll-behavior: smooth;
}

.row {
    height: 180px;
}

.mobile-only {
    display: none;
}

@media (max-width: 1200px) {
    .row {
        height: 260px;
    }
}

@media (max-width: 992px) {
    .col-md-6 {
        min-width: 80vw;
    }
    .main-title {
        font-size: 15vw !important;
    }
    .not-mobile {
        display: none;
    }
    .mobile-only {
        display: inline-block;
    }
    .prof {
        display: inline-block;
        width: 90vw !important;
    }
    .faq-page {
        width: 100vw;
        padding-left: 5vw !important;
        padding-right: 5vw !important;
    }
    .prof {
        padding: 50px 0vw 50px 0vw !important;
    }

    h3 {
        font-size: 2rem !important;
    }
    body {
        font-size: 1.4rem !important;
    }
    h3 {
        font-size: 2rem !important;
    }
    .gb {
        padding: 4px 16px;
        cursor: pointer;
        font-size: 2rem;
        border-radius: 4px;
        margin: 0px 10px;
    }
    .figure-caption-title {
        font-size: 1.6rem !important;
    }
    .figure-caption {
        font-size: 1.4rem !important;
    }
    .figure-caption-e {
        font-size: 1.4rem !important;
    }
    .figure-caption-title-e {
        font-size: 1.2rem !important;
    }
    figure {
        width: 25vw;
    }
    .figure-e {
        width: 20vw;
    }
    .figure-image {
        width: 20vw;
    }
    .figure-image-e {
        width: 17vw;
    }
    .directors {
        padding: 0vw 12.5vw;
    }
    .everyone-else {
        padding: 0vw 10vw;
    }
    .navbar-brand,
    .navbar-toggler,
    .nav-link {
        font-size: 2rem !important;
    }

}


@media (max-width: 700px) {
    .prof {
        padding: 100px 0vw 150px 0vw !important;
    }
    body {
        font-size: 1.4rem !important;
    }
    h3 {
        font-size: 2rem !important;
    }
    .gb {
        padding: 2px 12px;
        cursor: pointer;
        font-size: 2rem;
        border-radius: 4px;
        margin: 0px 5px;
    }
    .figure-caption-title {
        font-size: 1.4rem !important;
    }
    .figure-caption {
        font-size: 1.2rem !important;
    }
    .figure-caption-e {
        font-size: 1.1rem !important;
    }
    .figure-caption-title-e {
        font-size: 1.2rem !important;
    }

}

::-webkit-scrollbar {
    width: initial;
}

::-webkit-scrollbar-track {
    background: #000000;
    /* color of the tracking area */
}

::-webkit-scrollbar-thumb {
    background-color: pink;
    /* color of the scroll thumb */
}

a.hyperlink {
    display: block;
    position: relative;
    top:-5vh;
    visibility: hidden;
}

a:hover {
    color: #768891;
    text-decoration: none;
    cursor: pointer;
}

.text1 {
    color: #c0e8f9;
    /* font-family: 'CircularStd'; */
    margin-top: 100px;
    /* animation: backInUp;
    animation-duration: 1s; */
}

.text2 {
    color: #c0e8f9;
    /* font-family: 'CircularStd'; */
    margin-top: 20px;
}

.menu-bar {
    float: right;
    width: 70%;
    height: 100px;
}

#copyright {
    color: #b8d3d1;
    text-align: center;
}

.menu-link {
    padding: 26px 20px 5px 10px;
    color: #b8d3d1;
    float: right;
}

.menu-name {
    padding: 26px 0px 5px 30px;
    width: 30%;
    color: #b8d3d1;
    float: left;
}

.menu-bar-hidden {
    display: none;
}

#menu-down {
    display: none;
}

.header {
    background: rgba(0, 0, 0, 0);
    width: 100%;
    height: 80px;
    position: absolute;
    z-index: 10;
}


h1 {
    color: #b8d3d1;
}

.title-page {
    padding-bottom: 10vh;
}

.title-container {
    padding-top: 22vh;
    z-index: 30;
}

.title-right {
    color: #ce7b91 !important;
}

.title-left {
    color: #B8D3D1 !important;
}

.main-title {
    font-size: 9rem;
    font-family: 'CircularStd';
}

.main-title:hover {
    animation-duration: 1s;
}

.prof {
    width: 35vw;
    height: 5vh;
}

.faq-page {
    width: 100vw;
    padding-left: 10vw;
    padding-right: 10vw;
}

.title-right:hover {
    cursor: text;
}

.halfnhalf:before {
    content: "Theta";
    color: #c0e8f9;
}

.halfnhalf:after {
    content: "Hacks";
    color: #CE7B91;
}

.slidefadeleft {
    float: left;
}

.slidefaderight {
    float: right;
}


/*! this is bad we should remove it */

.slidefadeleft:nth-child(odd) {
    animation-duration: 0.6s;
    /* So they look staggered */
}

.slidefaderight:nth-child(odd) {
    animation-duration: 0.6s;
    /* So they look staggered */
}

.prof {
    opacity: 0;
}

.proftitle {
    font-family: 'CircularStd';
    color: gainsboro;
}

.desc {
    color: gainsboro;
}

.q {
    text-align: center;
    clear: both;
}

.scrolled {
    background-color: #0c0c0ce8;
    /* ? Scroll Color! */
    transition: background 1.5s;
}

.un-scrolled {
    background-color: rgba(0, 0, 0, 0);
    transition: background 1.5s;
}

.questionLink {
    color: rgb(71, 91, 179);
    font-family: inherit;
}

a.questionLink:hover {
    text-shadow: none;
}

.attendee {
    margin-top: 4vh;
    display: inline-block;
}

.mentor {
    margin-top: 4vh;
    display: inline-block;
}

.path {
    stroke: white;
    stroke-dasharray: 1000;
    stroke-dashoffset: 1000;
    stroke-width: 5px;
    stroke-linecap: round;
    stroke-linejoin: round;
}

table {
    min-width: 470px !important;
}

#daystamp {
    opacity: 1 !important;
}

#timestamp {
    opacity: 1 !important;
}

pre {
    margin: 0;
    padding: 0;
    display: inline;
}

.leftarrow {
    cursor: pointer;
    color: gainsboro;
    font-size: 2rem;
    margin-right: 2%;
    user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    z-index: 100;
}

.leftarrow:hover {
    color: gray;
}

.rightarrow {
    cursor: pointer;
    color: gainsboro;
    font-size: 2rem;
    margin-left: 2%;
    user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    z-index: 100;
}

.rightarrow:hover {
    color: gray;
}

#day {
    color: gainsboro;
    font-size: 2rem;
    margin-bottom: 1%;
}

.arrow-container {
    position: absolute;
    left: 1%;
    transition: all 2s ease-in-out;
}

.path-container {
    position: absolute;
    left: 0;
}

#timestamp {
    color: gainsboro;
    position: absolute;
    top: 2.5vh;
    opacity: 0;
    animation-duration: 2s;
    transition: all 2s ease-in-out;
}

.column2 {
    font-family: Montserrat !important;
    font-weight: normal !important;
}

.column1 {
    font-family: Montserrat !important;
}

#daystamp {
    color: gainsboro;
    position: absolute;
    top: 0vh;
    opacity: 0;
    animation-duration: 2s;
    transition: all 2s ease-in-out;
}

.svg-container {
    margin-left: 15vw;
    position: absolute;
}

.schedule {
    margin-right: 15vw;
    float: right;
}

div.table100-head {
    background-color: #6c7ae0;
}

div.table100 {
    /* Get rid of annoying lines around table */
    background-color: #202030;
}

table.schedule1 {
    background-color: #202030;
}

.attendee {
    filter: grayscale(100%);
}

.mentor {
    filter: grayscale(100%);
}

@media (max-width: 1500px) {
    .schedule {
        margin: 6vh 10vw 0 0 !important;
    }
    .svg-container {
        margin-left: 10vw !important;
    }
}

@media (max-width: 1300px) {
    .schedule {
        margin: 6vh 5vw 0 0 !important;
    }
    .svg-container {
        margin-left: 5vw !important;
    }
}

@media (max-width: 1130px) {
    .svg-container {
        transform: scaleX(0.9);
    }
    .schedule {
        margin: 6vh 5vw 0 0 !important;
    }
    .svg-container {
        margin-left: 0vw !important;
    }
}

@media (max-width: 992px) {
    .schedule {
        float: none;
        margin: 6vh 5vw 0vh 5vw !important;
    }
    .svg-container {
        display: none;
    }
}

